--- a/applications/sample-app-starter/pom.xml
+++ b/applications/sample-app-starter/pom.xml
@@ -40,11 +40,12 @@
         </dependency> 
 
         <!-- https://mvnrepository.com/artifact/com.lihaoyi/os-lib -->
+        <!--
         <dependency>
             <groupId>com.lihaoyi</groupId>
             <artifactId>os-lib_3</artifactId>
             <version>0.11.4</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>provingly.io</groupId>
