--- a/applications/sample-app-starter/src/main/luego/newco/crm/DiscountEligibility.dm.yaml
+++ b/applications/sample-app-starter/src/main/luego/newco/crm/DiscountEligibility.dm.yaml
@@ -10,7 +10,7 @@ graph:
   body: >
     Response(eligibilityStatus = `criteria 1` and `criteria 2`, 
          value = 100 + the value of `the request`,
-         message = 'Hello ' + capitalize(the customerName of `the request`)) named res
+         message = 'Hello ' + capitalize(the customerName of `the request`))
 
   level: '0'
   y: '0.5'
@@ -22,7 +22,7 @@ graph:
   body: >
     {
       let sum = (request.products map (p => p.price)).sum;
-      sum >= 200.0
+      sum >= 200.0;
     }
 
   level: '1'
