--- a/applications/sample-app-starter/src/main/luego/newco/crm/discountEligility.fun.yaml
+++ b/applications/sample-app-starter/src/main/luego/newco/crm/discountEligility.fun.yaml
@@ -11,7 +11,7 @@ definition: >
   {
     let criteria1 = {
       let sum = (`the request`.products map (p => p.price)).sum;
-      sum >= 200.0
+      sum >= 200.0;
     };
     let criteria2 = depending on the loyaltyLevel of `the request` {
       case None => false
@@ -20,5 +20,5 @@ definition: >
 
     Response(eligibilityStatus = criteria1 and criteria2, 
       value = 100 + the value of `the request`,
-      message = 'Hello ' + upper(the customerName of `the request`)) named res
+      message = 'Hello ' + upper(the customerName of `the request`));
   }
