--- a/applications/loyalty-points-app/pom.xml
+++ b/applications/loyalty-points-app/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>provingly</groupId>
-    <artifactId>luego-starter-app</artifactId>
+    <artifactId>luego-loyalty-app</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -15,7 +15,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
 
-        <luego.version>1.0.0-b12</luego.version>
+        <luego.version>1.0.0-b11</luego.version>
     </properties> 
 
     <build>
