Fix loyalty decision model and show how to set the compiler log level

--- a/applications/loyalty-points-app/src/main/luego/newco/crm/DM_DiscountAndPoints.dm.yaml
+++ b/applications/loyalty-points-app/src/main/luego/newco/crm/DM_DiscountAndPoints.dm.yaml
@@ -38,14 +38,15 @@ graph:
   output: 'Integer'
   body: >
     depending on the loyaltyLevel of `the request` {
-      case None => 0.0
+      case None => 0
       case Some(level) => {
         let sum : Number = (`the request`.products map (p => p.price)).sum;
-        depending on level {
+        let nump = depending on level {
           case `LoyaltyLevel.Silver` => min(sum * 0.01, 30.0)
           case `LoyaltyLevel.Gold` => min(sum * 0.015, 40.0)
           case `LoyaltyLevel.Platinum` => min(sum * 0.02, 50.0)
         };
+        floorInt(nump);
       }
     }
 
