--- a/applications/starter-app/pom.xml
+++ b/applications/starter-app/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>provingly</groupId>
-    <artifactId>luego-loyalty-app</artifactId>
+    <artifactId>luego-starter-app</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
