--- a/applications/loyalty-points-app/pom.xml
+++ b/applications/loyalty-points-app/pom.xml
@@ -3,20 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>provingly</groupId>
+    <parent>
+        <artifactId>application-samples</artifactId>
+        <groupId>provingly</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>luego-loyalty-app</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>21</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <maven.compiler.release>${java.version}</maven.compiler.release>
-
-        <luego.version>1.0.0-b15</luego.version>
-    </properties> 
 
     <build>
         <plugins>
@@ -72,45 +68,5 @@
 
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.11.0-M2</version>
-            <scope>test</scope>
-        </dependency> 
-
-        <dependency>
-            <groupId>io.provingly</groupId>
-            <artifactId>luego_devtools_3</artifactId>
-            <version>${luego.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.provingly</groupId>
-            <artifactId>luego_buildchain_3</artifactId>
-            <version>${luego.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.provingly</groupId>
-            <artifactId>luego_runtime_3</artifactId>
-            <version>${luego.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.provingly</groupId>
-            <artifactId>luego_common_3</artifactId>
-            <version>${luego.version}</version>
-        </dependency>                
-                    
-    </dependencies>
-    
-    <repositories>
-        <repository>
-            <id>GitLab</id>
-            <name>GitLab</name>
-            <url>https://gitlab.com/api/v4/projects/75218486/packages/maven/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>    
 
 </project>
