Rename functions and clean unit tests

--- a/applications/starter-app/src/main/luego/sample/starter/GenerateResponse1.fun.yaml
+++ b/applications/starter-app/src/main/luego/sample/starter/GenerateResponse1.fun.yaml
@@ -3,10 +3,10 @@ imports:
   - luego.text.*
 
 exposable: true
-output: 'sample.greetings.Response'
+output: 'sample.starter.Response'
 inputs:
   - name: the request
-    type: 'sample.greetings.Request'
+    type: 'sample.starter.Request'
 definition: >
   {
     let m = upper(the message of `the request`);
