Improve banking app

--- a/applications/banking-offers-app/src/main/luego/sample/banking/eligibility/AssessEligibility.fun.yaml
+++ b/applications/banking-offers-app/src/main/luego/sample/banking/eligibility/AssessEligibility.fun.yaml
@@ -6,6 +6,9 @@ output: List[Text]
 inputs:
   - name: the request
     type: 'sample.banking.Request'
+  - name: the customer
+    type: 'sample.banking.Person'
+
 definition: >
   {
     [];
