--- a/applications/banking-offers-app/pom.xml
+++ b/applications/banking-offers-app/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>luego-starter-app</artifactId>
+    <artifactId>banking-offers-app</artifactId>
     <packaging>jar</packaging>
 
     <build>
@@ -32,7 +32,7 @@
                         </goals>                        
                         <configuration>
                             <mainClass>luego.DevCLI</mainClass>
-                            <workingDirectory>${project.basedir}/starter-app</workingDirectory>    
+                            <workingDirectory>${project.basedir}/banking-offers-app</workingDirectory>    
                             <arguments>
                                 <argument>app</argument>
                                 <argument>compile</argument>
