--- a/applications/banking-offers-app/src/main/luego/luego.application.yaml
+++ b/applications/banking-offers-app/src/main/luego/luego.application.yaml
@@ -1,6 +1,6 @@
 ---
 domain: Samples
-appId: eligibility-and-pricing-app
+appId: banking-offers-app
 groupId: io.provingly
 appVersion: 1.0.0
 
@@ -8,12 +8,11 @@ provider:
   name: Provingly
   email: info@provingly.io
 
-lastUpdate: 2025-07-11
-luegoVersion: 1.0.0
+generateOpenApi: false
 dependencies: []
 
 localizedInfo:
-  - label: Luego Eligibility and Pricing App
+  - label: Luego Validation, Eligibility and Pricing App
     description: A sample to show how to organize decisions in multiple folders
     tags: [ 'sample', 'eligibility', 'pricing' ]
     lang: en
