--- a/applications/banking-offers-app/src/main/luego/sample/banking/ProcessRequest.fun.yaml
+++ b/applications/banking-offers-app/src/main/luego/sample/banking/ProcessRequest.fun.yaml
@@ -1,25 +1,39 @@
 ---
 imports:
-  - luego.text.*
+  - luego.list.*
+  - sample.banking.*
   - sample.banking.validation.*
   - sample.banking.eligibility.*
   - sample.banking.offers.*
+
+usedDecisions: 
+  - sample.banking.validation.ValidateRequest
+  - sample.banking.eligibility.AssessEligibility
+  - sample.banking.offers.CalculateSpecialOffer
 
 exposable: true
 output: 'sample.banking.Response'
 inputs:
   - name: the request
     type: 'sample.banking.Request'
+  - name: the customer
+    type: 'sample.banking.Person'
 definition: >
-  {
-    let errors = ValidateRequest(`the request`);
-    if errors.nonEmpty
-      InvalidRequest(errors)
-    else {
-      let rejections = AssessEligibility(`the request`);
-      if rejections.nonEmpty
-        NoDiscount(rejections)
-      else
-        SpecialPriceOffer(`the request`);
-    };
+  depending on nonEmptyListOption(ValidateRequest(`the request`, `the customer`)) {
+    case Some(errors) => InvalidRequest(errors = errors)
+    case None => 
+      depending on nonEmptyListOption(AssessEligibility(`the request`, `the customer`)) {
+        case Some(rejections) => NoDiscount(reasons = rejections)
+        case None => CalculateSpecialOffer(`the request`, `the customer`)
+      }
   }
+  /* should be rewritten as
+  depending on ValidateRequest(`the request`, `the customer`) {
+    case errors: NEList[Text] => InvalidRequest(errors = errors)
+    case Nil => 
+      depending on AssessEligibility(`the request`, `the customer`) {
+        case rejections: NEList[Text] => NoDiscount(reasons = rejections)
+        case Nil => CalculateSpecialOffer(`the request`, `the customer`)
+      }
+  }
+  */
