--- a/applications/insurance-fraud-appX/src/main/luego/luego.application.yaml
+++ b/applications/insurance-fraud-appX/src/main/luego/luego.application.yaml
@@ -8,7 +8,7 @@ provider:
   name: Provingly
   email: info@provingly.io
 
-generateOpenApi: false
+generateOpenApi: true
 dependencies: []
 
 localizedInfo:
