--- a/applications/banking-offers-app/src/main/luego/sample/banking/ProcessRequest.fun.yaml
+++ b/applications/banking-offers-app/src/main/luego/sample/banking/ProcessRequest.fun.yaml
@@ -21,10 +21,10 @@ inputs:
     
 definition: >
   depending on ValidateRequest(`the request`, `the customer`) {
-    case errors: NEList[Text] => InvalidRequest(errors = errors)
+    case errors: NonEmptyList[Text] => InvalidRequest(errors = errors)
     case Nil => 
       depending on AssessEligibility(`the request`, `the customer`) {
-        case rejections: NEList[Text] => NoDiscount(reasons = rejections)
+        case rejections: NonEmptyList[Text] => NoDiscount(reasons = rejections)
         case Nil => CalculateSpecialOffer(`the request`, `the customer`)
       }
   }
