--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -7,9 +7,10 @@
     <packaging>pom</packaging>    
     
     <modules>
-        <module>starter-app</module>
-        <module>hello-app</module>
-        <module>loyalty-points-app</module>
+        <module>luego-starter-app</module>
+        <module>luego-hello-app</module>
+        <module>luego-loyalty-points-app</module>
+        <module>luego-banking-offers-app</module>
     </modules>
 
     <properties>
@@ -19,7 +20,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
 
-        <luego.version>1.0.0-b43</luego.version>
+        <luego.version>1.0.0-b46</luego.version>
     </properties>
 
 
@@ -55,18 +56,41 @@
     </dependencies>
 
 
-    <build>
+    <build>     
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>io.provingly</groupId>
+                    <artifactId>luego-maven-plugin</artifactId>
+                    <version>1.0.0-beta4</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>    
+
         <plugins>
+            <plugin>
+                <groupId>io.provingly</groupId>
+                <artifactId>luego-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>      
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.14.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                <source>21</source>
+                <target>21</target>
                 </configuration>
-            </plugin>
-            
+            </plugin>  
+
         </plugins>
     </build>  
     
